Mbl-197 invite page (#199)

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-device-info": "^0.12.1",
     "react-native-document-picker": "^2.1.0",
     "react-native-fbsdk": "^0.6.3",
+    "react-native-gesture-handler": "^1.0.0-alpha.41",
     "react-native-google-signin": "https://github.com/njt1982/react-native-google-signin#1c99bcf",
     "react-native-htmlview": "^0.12.0",
     "react-native-image-picker": "^0.26.7",
@@ -48,8 +49,9 @@
     "react-native-restart": "^0.0.4",
     "react-native-sentry": "^0.34.0",
     "react-native-tab-navigator": "^0.3.4",
+    "react-native-tab-view": "^0.0.74",
     "react-native-triangle": "^0.0.9",
-    "react-native-vector-icons": "^4.4.2",
+    "react-native-vector-icons": "^4.5.0",
     "react-native-webview-bridge-updated": "Hylozoic/react-native-webview-bridge#62f520e8",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#6cb3038e",
     "react-navigation": "^1.2",
