--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "cheerio": "0.22.0",
     "ent": "^2.2.0",
     "faker": "^4.1.0",
     "hylo-utils": "Hylozoic/hylo-utils#716622b5",
