--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prop-types": "^15.6.0",
     "react": "16.2.0",
     "react-native": "^0.53.0",
+    "react-native-autocomplete-input": "^3.5.0",
     "react-native-background-timer": "^1.3.0",
     "react-native-device-info": "^0.12.1",
     "react-native-document-picker": "^2.1.0",
