--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "path-match": "^1.2.4",
     "path-to-regexp": "^2.0.0",
     "prop-types": "^15.6.0",
-    "react": "16.2.0",
-    "react-native": "^0.53.0",
+    "react": "^16.3.0-alpha.1",
+    "react-native": "0.54.4",
     "react-native-background-timer": "^1.3.0",
     "react-native-device-info": "^0.12.1",
     "react-native-document-picker": "^2.1.0",
