--- a/package.json
+++ b/package.json
@@ -17,19 +17,11 @@
     "coverage:diff": "node ../jest-diff-coverage && open coverage/lcov-report/index.html",
     "clean-start": "./scripts/clean-rebuild.sh",
     "configure": "./scripts/configure.sh",
-    "postinstall": "rm -f ./node_modules/react-native/local-cli/core/__fixtures__/files/package.json"
+    "postinstall": "(find node_modules -type f -name .babelrc | grep -v /react-native/ | xargs rm) || true"
   },
   "dependencies": {
-    "babel-eslint": "^8.0.1",
-    "babel-plugin-inline-dotenv": "^1.1.1",
-    "babel-plugin-transform-inline-environment-variables": "^0.2.0",
-    "babel-plugin-transform-remove-console": "^6.8.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "cheerio": "0.22.0",
     "ent": "^2.2.0",
-    "faker": "^4.1.0",
     "hylo-utils": "Hylozoic/hylo-utils#77dadf8",
     "lodash": "^4.17.4",
     "parse": "^1.9.2",
@@ -66,18 +58,24 @@
     "redux-promise": "^0.5.3",
     "sails.io.js": "1.1.10",
     "socket.io-client": "^2.0.3",
-    "standard": "^10.0.3",
     "striptags": "~2",
     "tinycolor2": "^1.4.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-remove-style": "^0.1.0",
-    "babel-preset-react-native": "^1.9.2",
-    "jest": "^20.0.4",
+    "babel-plugin-transform-inline-environment-variables": "^0.2.0",
+    "babel-plugin-transform-remove-console": "^6.8.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-react-native": "^4.0.0",
+    "faker": "^4.1.0",
+    "jest": "^22.4.3",
     "jest-simple-reporter": "^0.1.0",
-    "react-test-renderer": "16.2",
-    "remote-redux-devtools": "^0.5.11",
+    "react-test-renderer": "^16.3.0-alpha.1",
+    "remote-redux-devtools": "^0.5.12",
+    "standard": "^11.0.1",
     "timezone-mock": "^0.0.6",
     "validator": "^8.0.0"
   },
