--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "path-match": "^1.2.4",
     "path-to-regexp": "^2.0.0",
     "prop-types": "^15.6.0",
+    "react-native-autocomplete-input": "^3.5.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.4",
     "react-native-background-timer": "^1.3.0",
