--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "path-match": "^1.2.4",
     "path-to-regexp": "^2.0.0",
     "prop-types": "^15.6.0",
-    "react-native-autocomplete-input": "^3.5.0",
+    "re-reselect": "^2.0.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.4",
+    "react-native-autocomplete-input": "^3.5.0",
     "react-native-background-timer": "^1.3.0",
     "react-native-device-info": "^0.21.5",
     "react-native-document-picker": "^2.1.0",
@@ -77,9 +78,11 @@
     "jest-simple-reporter": "^0.1.0",
     "react-test-renderer": "^16.3.0-alpha.1",
     "remote-redux-devtools": "^0.5.12",
+    "reselect-tools": "^0.0.6",
     "standard": "^11.0.1",
     "timezone-mock": "^0.0.6",
-    "validator": "^8.0.0"
+    "validator": "^8.0.0",
+    "why-did-you-update": "^0.1.1"
   },
   "jest": {
     "preset": "react-native",
