--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "re-reselect": "^2.0.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.4",
+    "react-native-autocomplete-input": "^3.5.0",
     "react-native-background-timer": "^1.3.0",
     "react-native-device-info": "^0.21.5",
     "react-native-document-picker": "^2.1.0",
