--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -162,6 +162,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-intercom')
     compile project(':react-native-sentry')
     compile project(':react-native-restart')
     compile project(':react-native-document-picker')
