--- a/package.json
+++ b/package.json
@@ -50,14 +50,14 @@
     "react-native-tab-view": "^0.0.74",
     "react-native-triangle": "^0.0.9",
     "react-native-vector-icons": "^4.5.0",
-    "react-native-webview-bridge-updated": "Hylozoic/react-native-webview-bridge#62f520e8",
-    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#6e094ed",
+    "react-native-webview-bridge-updated": "Hylozoic/react-native-webview-bridge#62f520e",
+    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#7c1b9c5",
     "react-navigation": "^1.2",
     "react-navigation-is-focused-hoc": "Hylozoic/react-navigation-is-focused-hoc#multiple-set-state",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-orm": "Hylozoic/redux-orm#model-createClass-dist",
+    "redux-orm": "Hylozoic/redux-orm#createclass2-dist",
     "redux-promise": "^0.5.3",
     "sails.io.js": "1.1.10",
     "socket.io-client": "^2.0.3",
