Android Intent setup and deepLinkHandler adjustments for URL schema

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
             <data android:scheme="https" android:host="hylo.com" />
             <data android:scheme="http" android:host="www.hylo.com" />
             <data android:scheme="https" android:host="www.hylo.com" />
+            <data android:scheme="HyloApp" android:host="test" />
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
