--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,9 @@ project(':react-native-fbsdk') {
 allprojects {
     repositories {
         mavenLocal()
+        // Temporary fix, see: 
+        // https://github.com/zo0r/react-native-push-notification/issues/748#issuecomment-392523852
+        maven { url 'https://maven.google.com' }
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
