--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "0.22.0",
     "ent": "^2.2.0",
     "hylo-utils": "Hylozoic/hylo-utils#c4db0b4",
+    "js-htmlencode": "^0.3.0",
     "lodash": "^4.17.4",
     "parse": "^1.9.2",
     "path-match": "^1.2.4",
