--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,6 @@
           android:label="@string/app_name"
           android:theme="@style/SplashTheme"
           android:launchMode="singleTask">
-
           <intent-filter>
               <action android:name="android.intent.action.MAIN" />
               <category android:name="android.intent.category.DEFAULT" />
@@ -44,6 +43,8 @@
             <data android:scheme="https" android:host="hylo.com" />
             <data android:scheme="http" android:host="www.hylo.com" />
             <data android:scheme="https" android:host="www.hylo.com" />
+            <data android:scheme="hyloapp" android:host="home" />
+            <data android:scheme="hyloapp" />
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
