--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "hylo-utils": "Hylozoic/hylo-utils#a1f23db",
     "js-htmlencode": "^0.3.0",
     "lodash": "^4.17.4",
-    "mixpanel-browser": "^2.22.4",
     "parse": "^1.9.2",
     "path-match": "^1.2.4",
     "path-to-regexp": "^2.0.0",
@@ -43,6 +42,7 @@
     "react-native-htmlview": "^0.12.0",
     "react-native-image-picker": "^0.26.7",
     "react-native-linear-gradient": "^2.3.0",
+    "react-native-mixpanel": "^1.1.0",
     "react-native-onesignal": "^3.1.0",
     "react-native-prompt-android": "^0.3.1",
     "react-native-restart": "^0.0.4",
