--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,8 @@ jobs:
         - v1-dep-
     # This is based on your 1.0 configuration file or project settings
     - run: npm install -g codecov
+    # Install yarn so it's up to date    
+    - run: npm install -g yarn
     # This is based on your 1.0 configuration file or project settings
     - run: yarn
     # Save dependency cache
