--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "standard": "^11.0.1",
     "timezone-mock": "^0.0.6",
     "validator": "^8.0.0",
-    "why-did-you-update": "^0.1.1"
+    "why-did-you-update": "^0.1.1",
+    "yarn": "^1.1.0"
   },
   "engines": {
     "node": "8.6.0",
