--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "react-native-prompt-android": "^0.3.1",
     "react-native-restart": "^0.0.4",
     "react-native-root-toast": "^3.0.1",
-    "react-native-sentry": "^0.35.3",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-tab-view": "^0.0.74",
     "react-native-triangle": "^0.0.9",
@@ -83,12 +82,7 @@
     "standard": "^11.0.1",
     "timezone-mock": "^0.0.6",
     "validator": "^8.0.0",
-    "why-did-you-update": "^0.1.1",
-    "yarn": "^1.1.0"
-  },
-  "engines": {
-    "node": "8.6.0",
-    "yarn": "^1.1.0"
+    "why-did-you-update": "^0.1.1"
   },
   "jest": {
     "preset": "react-native",
