--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-prompt-android": "^0.3.1",
     "react-native-restart": "^0.0.4",
     "react-native-root-toast": "^3.0.1",
+    "react-native-sentry": "^0.35.3",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-tab-view": "^0.0.74",
     "react-native-triangle": "^0.0.9",
