--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
     # This is based on your 1.0 configuration file or project settings
     - run: npm install -g codecov
     # Install yarn so it's up to date
-    - run: apt-get update && apt-get install yarn
+    - run: sudo apt-get update && sudo apt-get install yarn
     # This is based on your 1.0 configuration file or project settings
     - run: yarn
     # Save dependency cache
