--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,8 @@ jobs:
     # To see the list of pre-built images that CircleCI provides for most common languages see
     # https://circleci.com/docs/2.0/circleci-images/
     docker:
-    - image: circleci/build-image:ubuntu-14.04-XXL-upstart-1189-5614f37
+    - image: circleci/node:8
+    # circleci/build-image:ubuntu-14.04-XXL-upstart-1189-5614f37
       command: /sbin/init
     steps:
     # Machine Setup
@@ -77,8 +78,8 @@ jobs:
         - v1-dep-
     # This is based on your 1.0 configuration file or project settings
     - run: npm install -g codecov
-    # Install yarn so it's up to date
-    - run: sudo apt-get update && sudo apt-get install yarn
+    # # Install yarn so it's up to date
+    # - run: sudo apt-get update && sudo apt-get install yarn
     # This is based on your 1.0 configuration file or project settings
     - run: yarn
     # Save dependency cache
