--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,9 +62,9 @@ jobs:
     # 'See docs on artifact collection here https://circleci.com/docs/2.0/artifacts/'
     - run: mkdir -p $CIRCLE_ARTIFACTS $CIRCLE_TEST_REPORTS
     # This is based on your 1.0 configuration file or project settings
-    - run:
-        working_directory: ~/Hylozoic/HyloReactNative
-        command: nvm install 8.6.0 && nvm alias default 8.6.0
+    # - run:
+        # working_directory: ~/Hylozoic/HyloReactNative
+        # command: nvm install 8.6.0 && nvm alias default 8.6.0
     # Dependencies
     #   This would typically go in either a build or a build-and-test job when using workflows
     # Restore the dependency cache
