--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
     #     # Any branch if there are none on the default branch - this should be unnecessary if you have your default branch configured correctly
     #     - v1-dep-
     # This is based on your 1.0 configuration file or project settings
-    - run: yarn install -g codecov
+    - run: yarn global add codecov
     # # Install yarn so it's up to date
     # - run: sudo apt-get update && sudo apt-get install yarn
     # This is based on your 1.0 configuration file or project settings
