--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ jobs:
     # This is based on your 1.0 configuration file or project settings
     - run: yarn test -- --coverage --runInBand
     # This is based on your 1.0 configuration file or project settings
-    - run: codecov --token=c2dc871a-a23b-4a38-b105-f46e97f383c7
+    - run: yarn exec codecov --token=c2dc871a-a23b-4a38-b105-f46e97f383c7
     # Teardown
     #   If you break your build into multiple jobs with workflows, you will probably want to do the parts of this that are relevant in each
     # Save test results
