--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "android": "react-native run-android",
     "android:device": "adb reverse tcp:3001 tcp:3001 && react-native run-android",
     "android:build": "yarn run android:prod && yarn run android:usb",
+    "codecov": "codecov -t b30663d3-771b-4b16-b030-0a0a56b335e3",
     "android:prod": "cd android && ./gradlew assembleRelease",
     "android:usb": "adb -d install -r android/app/build/outputs/apk/app-release.apk",
     "ios": "react-native run-ios",
