--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "cheerio": "0.22.0",
     "ent": "^2.2.0",
-    "hylo-utils": "Hylozoic/hylo-utils#c4db0b4",
+    "hylo-utils": "Hylozoic/hylo-utils#a1f23db",
     "js-htmlencode": "^0.3.0",
     "lodash": "^4.17.4",
     "parse": "^1.9.2",
@@ -43,6 +43,7 @@
     "react-native-htmlview": "^0.12.0",
     "react-native-image-picker": "^0.26.7",
     "react-native-linear-gradient": "^2.3.0",
+    "react-native-mixpanel": "^1.1.1",
     "react-native-onesignal": "^3.1.0",
     "react-native-prompt-android": "^0.3.1",
     "react-native-restart": "^0.0.4",
