--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,5 +7,6 @@ target 'HyloReactNative' do
   pod 'FBSDKCoreKit'
   pod 'FBSDKShareKit'
   pod 'FBSDKLoginKit'
+  pod 'Intercom'
   pod 'Mixpanel'
 end
