--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -49,6 +49,14 @@
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
       <activity android:name=".OneSignalConfigActivity" android:launchMode="singleTop" />
+        <service
+          android:name="com.robinpowered.react.Intercom.IntercomIntentService"
+          android:exported="false">
+          <intent-filter
+              android:priority="999">
+              <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+          </intent-filter>
+        </service>
     </application>
 
 </manifest>
