--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "cheerio": "0.22.0",
     "ent": "^2.2.0",
-    "hylo-utils": "Hylozoic/hylo-utils#20cd2c8",
+    "hylo-utils": "https://github.com/Hylozoic/hylo-utils#a1f23db",
     "js-htmlencode": "^0.3.0",
     "lodash": "^4.17.4",
     "parse": "^1.9.2",
@@ -42,7 +42,7 @@
     "react-native-google-signin": "https://github.com/njt1982/react-native-google-signin#1c99bcf",
     "react-native-htmlview": "^0.12.0",
     "react-native-image-picker": "^0.26.7",
-    "react-native-intercom": "^12.0.0",
+    "react-native-intercom": "10.2.0",
     "react-native-linear-gradient": "2.4.0",
     "react-native-mixpanel": "^1.1.1",
     "react-native-onesignal": "^3.1.0",
